# dagster-code-location-crypto-data

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.local  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml  serve-docs.sh
.github/workflows/: README.md  ci.yml
.task/checksum/: build-run
docs/: architecture.md  deployment.md  development.md  index.md  io-managers.md  setup.md  troubleshooting.md
docs/api/: assets.md  index.md  models.md  resources.md
docs/diagrams/: architecture.d2
docs/stylesheets/: extra.css
manifests/: .env.example  README.md  configmap.yaml  coredns-configmap.yaml  create_sealed_secrets.nu  kustomization.yaml
scripts/: init_pipeline_configs.py
src/: definitions.py
src/dagster_crypto_data/: definitions.py
src/dagster_crypto_data/assets/: extract.py  transform.py
src/dagster_crypto_data/connectors/: database.py
src/dagster_crypto_data/defs/assets/: extract.py  transform.py
src/dagster_crypto_data/defs/connectors/: database.py
src/dagster_crypto_data/defs/io_managers/: __init__.py  duckdb.py  filesystem.py  kuzudb.py  s3.py  sql.py
src/dagster_crypto_data/defs/models/: __init__.py  base_crypto_model.py  pipeline_configs.py  tickers.py
src/dagster_crypto_data/defs/resources/: __init__.py  database.py  exchange.py
src/dagster_crypto_data/defs/utils/: __init__.py  filesystems.py  logger.py  run_info.py
src/dagster_crypto_data/io_managers/: __init__.py  duckdb.py  filesystem.py  kuzudb.py  s3.py  sql.py
src/dagster_crypto_data/models/: pipeline_configs.py
src/dagster_crypto_data/resources/: exchange.py
src/dagster_crypto_data/utils/: logger.py  settings.py
tests/: conftest.py  test_database.py  test_database_config.py  test_exchange_resource.py  test_extract.py  test_filesystems_utility.py  test_logger.py  test_transform.py
tests/io_managers/: __init__.py  test_duckdb.py  test_filesystem.py  test_kuzudb.py  test_s3.py  test_sql.py
