[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagster-crypto-data"
version = "0.1.0"
description = "Orchestrating Dagster job for extracting, transforming and storing crypto data"
readme = "README.md"
authors = [{ name = "Lior Gefen", email = "lior@gefen.tech" }]
requires-python = ">=3.14"
license = "APACHE-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Framework :: Pytest",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Testing :: Unit",
]
dependencies = [
  "alembic>=1.17.2",
  "boto3>=1.42.17",
  "ccxt>=4.5.29",
  "dagster>=1.12.7",
  "dagster-postgres>=0.28.7",
  "dagster-webserver>=1.12.7",
  "httpx>=0.28.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "sqlmodel>=0.0.30",
]

[project.scripts]
dagster-crypto-data = "dagster_crypto_data:main"

[dependency-groups]
testing = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.dagster]
module = "src.definitions"

[tool.black]
line-length = 89
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default excludes
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 89
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
]
ignore = [
  "E501", # line too long (handled by black)
  "B008", # do not perform function calls in argument defaults
  "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/**/*.py" = ["ARG"] # Unused function arguments in tests

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip_gitignore = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = ["dagster.*", "dlt.*", "ccxt.*", "sqlmodel", "sqlmodel.*", "sqlalchemy", "sqlalchemy.*", "pydantic", "pydantic.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=dagster_crypto_data",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow running tests",
]
env = ["ENVIRONMENT=test"]

[tool.coverage.run]
source = ["src.definitions"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
